Server fix, run functionality and many bugfixes

--- a/client/refresher.ini
+++ b/client/refresher.ini
@@ -1,7 +1,11 @@
-server.uri = http://criticalimpact.nixone.sk/refresher.php
+server.uri = http://nixone-home.hopto.org:8081/refresher.php
 
 gui.title = Critical Impact Updater
 
 local.versionFile = .version
 
 local.applicationDirectory = test
+
+local.commandToRun.Linux = test/CriticalImpact.linux.sh
+
+local.filesToBeExecutable.1 = test/CriticalImpact.linux.sh
