Added windows support and better gui

--- a/client/refresher.ini
+++ b/client/refresher.ini
@@ -6,6 +6,8 @@ local.versionFile = .version
 
 local.applicationDirectory = test
 
-local.commandToRun.Linux = test/CriticalImpact.linux.sh
+local.commandToRun.Linux = test/CriticalImpact.app.linux.sh
+local.commandToRun.Windows = test/CriticalImpact.app.windows.bat
 
-local.filesToBeExecutable.1 = test/CriticalImpact.linux.sh
+local.filesToBeExecutable.1 = test/CriticalImpact.app.linux.sh
+local.filesToBeExecutable.2 = test/CriticalImpact.app.windows.bat
