Configuration for Critical Impact and some GUI and download improvements.

--- a/client/refresher.ini
+++ b/client/refresher.ini
@@ -11,3 +11,15 @@ local.commandToRun.Windows = test/CriticalImpact.app.windows.bat
 
 local.filesToBeExecutable.1 = test/CriticalImpact.app.linux.sh
 local.filesToBeExecutable.2 = test/CriticalImpact.app.windows.bat
+
+gui.messageInitializingUpdater = Initializing updater...
+gui.messageDone = Done.
+gui.messageUpdatedToVersion = Updated to version %s.
+gui.messageUpdatingToVersion = Updating to version %s...
+gui.runButtonText = Play
+gui.updateButtonText = Update
+gui.messageFetchingUpdateInfo = Contacting update server...
+gui.messageThereIsNewerVersion = Version %s is available
+gui.messageEverythingUpToDate = Game is up to date.
+gui.messageYouMayUpdateNow = You can update now...
+gui.messageYouMayRunNow = You can play now...
